# copter-control

./: CMakeLists.txt  package.xml
msg/: CommandMatrix.msg  CopterDirect.msg  CopterMove.msg
src/: calibration_node.py  command_matrix_node.py  control_node.py  random  rospy  serial_controller.py  test_node.py
